# my_chess_ql

./: .gitignore  Cargo.toml  Cargo_template.toml  README.md
.run/: Run - PGN Benchmark.run.xml  Run - Perft Benchmark.run.xml  Run.run.xml  Test.run.xml  build init.run.xml  training - local.run.xml  training - remote.run.xml
docs/: design.txt
release/: my_chess_ql
release/models/: keras_metadata.pb  saved_model.pb
release/models/variables/: variables.index
scripts/: run_tensorboard.sh
scripts/run/: build_lib.sh  build_training.sh  run_training_local.sh  run_training_remote.sh  run_training_remote_install.sh
scripts/training/: training.py  training_constants.py
src/: benchmarks.rs  constants.rs  engine.rs  game.rs  interfaces.rs  interfaces_python.rs  lib.rs  main.rs  neural.rs  test.rs
src/benchmarks/: PerftBenchmark.rs
src/engine/: EngineController.rs
src/game/: GameMove.rs  GameMoveList.rs  MoveGenerator.rs  Position.rs  PositionHelper.rs  analysis.rs  moves.rs  pieces.rs  positionanalyzer.rs
src/game/analysis/: KingAttackRayAnalyzer.rs  PositionAnalyzer.rs
src/game/moves/: GameMove.rs  GameMoveList.rs  MoveMaker.rs
src/game/pieces/: Bishop.rs  King.rs  Knight.rs  Pawn.rs  Piece.rs  Queen.rs  Rook.rs
src/interfaces/: pgn.rs  stockfish.rs  uci.rs
src/interfaces_python/: pgn.rs
src/neural/: NNPrediction.rs  PositionConverter.rs  training.py  training_constants.py  training_data.py  training_model.py
src/test/: LegalMovesHelper.rs  MoveMakerTestHelper.rs  profile.sh
src/test/qperft/: perft  perft.c
src/test/resources/: TestPGN.pgn  (+4 more)
