[package]
name = "my_chess_ql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.dev]
#opt-level = 3
#debug = 0

[dependencies]
#array2d = "0.2.1"
simple-error = "0.2.3"
json = "0.12.4"
lazy_static = "1.4.0"
regex = "0.2"
rand = "0.8.4"
#bitintr = "0.3.0"
#rayon = "1.5.1"
#core_simd = { git = "https://github.com/rust-lang/portable-simd" }
